--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-body{
-  margin:0;font-family:'Cairo',sans-serif;
-  background:#001a00;color:#00ff7f;transition:0.5s;
-}
+body{margin:0;font-family:'Cairo',sans-serif;background:#001a00;color:#00ff7f;transition:0.5s;}
 header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
 button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
 button:hover{background:#00ff7f;color:#000;box-shadow:0 0 20px #00ff7f;}
@@ -21,15 +18,9 @@ textarea:hover{transform:scale(1.02);}
 .progress{height:12px;background:#003300;border-radius:10px;margin-top:10px;}
 .bar{height:100%;width:0%;background:#00ff7f;border-radius:10px;transition:0.5s;}
 .bar.alert{animation:barPulse 1s infinite;}
-@keyframes barPulse{
-  0%{width:100%;}
-  50%{width:95%;}
-  100%{width:100%;}
-}
+@keyframes barPulse{0%{width:100%;}50%{width:95%;}100%{width:100%;}}
 .log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
-body.alertHigh{background:#550000 !important; color:#fff !important;}
-body.alertMedium{background:#555500 !important; color:#fff !important;}
-body.alertSafe{background:#003300 !important; color:#00ff7f !important;}
+body.alertHigh{background:#550000 !important;color:#fff !important;}
 footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7f33;}
 </style>
 </head>
@@ -73,27 +64,25 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 
 <footer>BlackFalcon SOC™ – Enterprise Simulation Platform</footer>
 
-<!-- الأصوات -->
 <audio id="alertHighSound"><source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
-<audio id="alertMediumSound"><source src="https://assets.mixkit.co/active_storage/sfx/270/270-preview.mp3"></audio>
-<audio id="alertSafeSound"><source src="https://assets.mixkit.co/active_storage/sfx/2572/2572-preview.mp3"></audio>
 <audio id="hoverSound"><source src="https://assets.mixkit.co/active_storage/sfx/2572/2572-preview.mp3"></audio>
 
 <script>
 let lang="en";
-let stats={safe:0,medium:0,high:0};
+let stats={safe:0,high:0};
 let debounceTimer=null;
 
 const texts={
-en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",medium:"SUSPICIOUS",high:"HIGH RISK"},
-ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",medium:"مشبوه",high:"خطر عالي"}
+en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",high:"HIGH RISK"},
+ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",high:"خطر عالي"}
 };
 
-// الكلمات المشبوهة القديمة مع زيادة الخطورة عند ذكر "تحقق من كلمة المرور"
+// كلمات المشبوهة القديمة
 const suspiciousWords=[
-"تحقق من كلمة المرور","قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن","مضاد للفيروسات",
-"تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","اختراق البيانات"
+"تحقق من كلمة المرور","تحقق من حسابك","قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن",
+"مضاد للفيروسات","تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","اختراق البيانات"
 ];
+const suspiciousPattern = new RegExp(suspiciousWords.join("|"),"i");
 
 function setLang(l){
 lang=l;document.documentElement.lang=l;
@@ -109,7 +98,6 @@ document.getElementById("msg").placeholder=texts[l].hover;
 }
 
 function generateIncident(){return "INC-"+Date.now().toString().slice(-6);}
-
 function speak(text){
 let u=new SpeechSynthesisUtterance(text);
 u.lang=lang==="ar"?"ar-SA":"en-US";u.rate=0.9;u.pitch=1;u.volume=1;
@@ -118,56 +106,43 @@ speechSynthesis.cancel();speechSynthesis.speak(u);
 
 function analyzeMessage(){
 let t=document.getElementById("msg").value.toLowerCase().normalize("NFC");
-if(t.length<3) return "";
+if(t.length<3) return;
 
 let score=0;
-suspiciousWords.forEach(w=>{
-if(t.includes(w.toLowerCase())) score+=100; // أي كلمة → HIGH
-});
-
 let statusText="",bar=document.getElementById("bar");
-document.body.classList.remove("alertHigh","alertMedium","alertSafe");
+document.body.classList.remove("alertHigh");
 bar.classList.remove("alert");
 
-if(score>=80){
+if(suspiciousPattern.test(t)){
+  score=100;
   statusText=texts[lang].high;
   stats.high++;
   document.body.classList.add("alertHigh");
   bar.classList.add("alert");
   document.getElementById("alertHighSound").play();
   speak(statusText+" threat detected");
-}else if(score>=40){
-  statusText=texts[lang].medium;
-  stats.medium++;
-  document.body.classList.add("alertMedium");
-  document.getElementById("alertMediumSound").play();
-  speak(statusText);
 }else{
+  score=0;
   statusText=texts[lang].safe;
   stats.safe++;
-  document.body.classList.add("alertSafe");
-  document.getElementById("alertSafeSound").play();
-  speak(statusText);
 }
 
 document.getElementById("status").innerText=statusText;
-document.getElementById("score").innerText=score>100?100:score;
-bar.style.width=(score>100?100:score)+"%";
+document.getElementById("score").innerText=score;
+bar.style.width=score+"%";
 document.getElementById("mitre").innerText="MITRE: T1566, T1204";
-let inc=generateIncident();document.getElementById("incident").innerText=inc;
+document.getElementById("incident").innerText=generateIncident();
 document.getElementById("feed").innerText=statusText+" - "+new Date().toLocaleTimeString();
-document.getElementById("log").innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${statusText} (${score>100?100:score}%)<br>`;
+document.getElementById("log").innerHTML+=`[${new Date().toLocaleTimeString()}] ${document.getElementById("incident").innerText} - ${statusText} (${score}%)<br>`;
 updateChart();
-return statusText+" - "+(score>100?100:score)+"%";
 }
 
 function analyze(){clearTimeout(debounceTimer);debounceTimer=setTimeout(()=>{analyzeMessage();},500);}
-
 document.getElementById("msg").addEventListener("input",analyze);
 document.getElementById("msg").addEventListener("mouseenter",()=>{document.getElementById("hoverSound").play(); speak(texts[lang].hover);});
 
-let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','Suspicious','High'],datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]}});
-function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];chart.update();}
+let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','High'],datasets:[{data:[0,0],backgroundColor:['#00ff7f','#ff4d4d']}]}});
+function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.high];chart.update();}
 
 function exportReport(){let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
 </script>
