--- a/index.html
+++ b/index.html
@@ -1,150 +1,270 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
 <meta charset="UTF-8">
 <title>BlackFalcon SOC™</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <style>
-body{margin:0;font-family:'Cairo',sans-serif;background:#001a00;color:#00ff7f;transition:0.5s;}
-header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
-button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
-button:hover{background:#00ff7f;color:#000;box-shadow:0 0 20px #00ff7f;}
-.container{max-width:1200px;margin:20px auto;padding:25px;background:rgba(0,20,0,0.9);border-radius:20px;transition:0.3s;}
-textarea{width:100%;height:140px;background:#000;border:2px solid #00ff7f;border-radius:15px;padding:15px;color:#00ff7f;font-size:15px;resize:none;transition:0.3s;}
-textarea:focus{outline:none;box-shadow:0 0 20px #00ff7f;}
-textarea:hover{transform:scale(1.02);}
-.card{background:#001a00;padding:20px;border-radius:15px;box-shadow:0 0 20px #00ff7f22;margin-top:15px;transition:0.3s;}
-.progress{height:12px;background:#003300;border-radius:10px;margin-top:10px;}
-.bar{height:100%;width:0%;background:#00ff7f;border-radius:10px;transition:0.5s;}
-.bar.alert{animation:barPulse 1s infinite;}
-@keyframes barPulse{0%{width:100%;}50%{width:95%;}100%{width:100%;}}
-.log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
-body.alertHigh{background:#550000 !important;color:#fff !important;}
-footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7f33;}
+body{
+margin:0;
+font-family:'Cairo',sans-serif;
+background:#001a00;
+color:#00ff7f;
+transition:0.5s;
+}
+
+header{
+text-align:center;
+padding:20px;
+border-bottom:1px solid #00ff7f33;
+cursor:pointer;
+}
+
+.container{
+max-width:1000px;
+margin:20px auto;
+padding:25px;
+background:rgba(0,20,0,0.9);
+border-radius:20px;
+}
+
+textarea{
+width:100%;
+height:140px;
+background:#000;
+border:2px solid #00ff7f;
+border-radius:15px;
+padding:15px;
+color:#00ff7f;
+font-size:16px;
+resize:none;
+transition:0.3s;
+}
+
+textarea:focus{
+outline:none;
+box-shadow:0 0 20px #00ff7f;
+}
+
+.card{
+background:#001a00;
+padding:20px;
+border-radius:15px;
+margin-top:15px;
+box-shadow:0 0 15px #00ff7f22;
+cursor:pointer;
+}
+
+.progress{
+height:12px;
+background:#003300;
+border-radius:10px;
+margin-top:10px;
+}
+
+.bar{
+height:100%;
+width:0%;
+background:#00ff7f;
+border-radius:10px;
+transition:0.5s;
+}
+
+.bar.alert{
+animation:pulse 1s infinite;
+}
+
+@keyframes pulse{
+0%{width:100%;}
+50%{width:95%;}
+100%{width:100%;}
+}
+
+body.alertHigh{
+background:#550000 !important;
+color:#fff !important;
+}
+
+.log{
+max-height:150px;
+overflow:auto;
+background:#0a0a0a;
+padding:10px;
+border-radius:10px;
+font-size:12px;
+}
+
+footer{
+text-align:center;
+padding:15px;
+font-size:12px;
+border-top:1px solid #00ff7f33;
+cursor:pointer;
+}
 </style>
 </head>
+
 <body>
 
-<header>
+<header data-voice="BlackFalcon SOC. نظام مراقبة وتحليل التهديدات السيبرانية.">
 <h1>🦅 BlackFalcon SOC™</h1>
-<p id="subtitle">Advanced SOC Simulation Platform</p>
-<button onclick="setLang('en')">English</button>
-<button onclick="setLang('ar')">العربية</button>
-<button onclick="exportReport()">Export Report</button>
+<p>Security Operations Simulation</p>
 </header>
 
 <div class="container">
-<textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
 
-<div class="card">
-<h3 id="threatLabel">Threat Status</h3>
+<textarea id="msg"
+data-voice="هذا مربع إدخال الرسالة. اكتب الرسالة لتحليلها أمنياً."
+placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+
+<div class="card" data-voice="قسم حالة التهديد ونسبة الخطورة.">
+<h3>Threat Status</h3>
 <p id="status">—</p>
-<p><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
+<p>Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
-<p id="mitre">MITRE: —</p>
-<p><span id="incidentLabel">Incident ID</span>: <span id="incident">—</span></p>
+<p>Incident ID: <span id="incident">—</span></p>
 </div>
 
-<div class="card">
-<h3 id="feedLabel">Threat Intelligence Feed</h3>
-<p id="feed">System Ready...</p>
-</div>
-
-<div class="card">
+<div class="card" data-voice="سجل الحوادث الأمنية المكتشفة.">
 <h3>Incident Log</h3>
 <div class="log" id="log"></div>
 </div>
 
-<div class="card">
-<h3 id="statsLabel">Statistics</h3>
+<div class="card" data-voice="إحصائيات تحليل الرسائل الآمنة والخطيرة.">
+<h3>Statistics</h3>
 <canvas id="chart"></canvas>
 </div>
+
 </div>
 
-<footer>BlackFalcon SOC™ – Enterprise Simulation Platform</footer>
+<footer data-voice="تم تطوير النظام بواسطة BlackFalcon SOC.">
+BlackFalcon SOC™
+</footer>
 
-<audio id="alertHighSound"><source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
-<audio id="hoverSound"><source src="https://assets.mixkit.co/active_storage/sfx/2572/2572-preview.mp3"></audio>
+<audio id="alertHighSound">
+<source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
+</audio>
 
 <script>
-let lang="en";
 let stats={safe:0,high:0};
+let lastStatus="";
 let debounceTimer=null;
+let lastSpoken="";
 
-const texts={
-en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",high:"HIGH RISK"},
-ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",high:"خطر عالي"}
-};
-
-// كلمات المشبوهة القديمة
 const suspiciousWords=[
-"تحقق من كلمة المرور","تحقق من حسابك","قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن",
-"مضاد للفيروسات","تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","اختراق البيانات"
+"تحقق من كلمة المرور",
+"تحقق من حسابك",
+"تحقق من حسابك البنكي",
+"قم بالدخول إلى حسابك",
+"تحديث الحساب",
+"الإجراء المطلوب",
+"فعّل الآن",
+"تغيير كلمة المرور",
+"انقر للتحقق",
+"أكد بياناتك",
+"معلومات سرية",
+"اختراق البيانات"
 ];
-const suspiciousPattern = new RegExp(suspiciousWords.join("|"),"i");
 
-function setLang(l){
-lang=l;document.documentElement.lang=l;
-document.body.dir=l==="ar"?"rtl":"ltr";
-document.getElementById("subtitle").innerText=texts[l].subtitle;
-document.getElementById("threatLabel").innerText=texts[l].threat;
-document.getElementById("riskLabel").innerText=texts[l].risk;
-document.getElementById("incidentLabel").innerText=texts[l].incident;
-document.getElementById("feedLabel").innerText=texts[l].feed;
-document.getElementById("statsLabel").innerText=texts[l].stats;
-document.getElementById("feed").innerText=texts[l].ready;
-document.getElementById("msg").placeholder=texts[l].hover;
+const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
+
+function speak(text){
+if(text===lastSpoken) return;
+lastSpoken=text;
+let u=new SpeechSynthesisUtterance(text);
+u.lang="ar-SA";
+u.rate=0.95;
+speechSynthesis.cancel();
+speechSynthesis.speak(u);
 }
 
-function generateIncident(){return "INC-"+Date.now().toString().slice(-6);}
-function speak(text){
-let u=new SpeechSynthesisUtterance(text);
-u.lang=lang==="ar"?"ar-SA":"en-US";u.rate=0.9;u.pitch=1;u.volume=1;
-speechSynthesis.cancel();speechSynthesis.speak(u);
+function generateIncident(){
+return "INC-"+Date.now().toString().slice(-6);
 }
 
 function analyzeMessage(){
-let t=document.getElementById("msg").value.toLowerCase().normalize("NFC");
-if(t.length<3) return;
+let text=document.getElementById("msg").value.toLowerCase().normalize("NFC");
+if(text.length<3) return;
 
 let score=0;
-let statusText="",bar=document.getElementById("bar");
+let status="";
+let bar=document.getElementById("bar");
+
 document.body.classList.remove("alertHigh");
 bar.classList.remove("alert");
 
-if(suspiciousPattern.test(t)){
-  score=100;
-  statusText=texts[lang].high;
-  stats.high++;
-  document.body.classList.add("alertHigh");
-  bar.classList.add("alert");
-  document.getElementById("alertHighSound").play();
-  speak(statusText+" threat detected");
+if(suspiciousPattern.test(text)){
+score=100;
+status="خطر عالي";
+stats.high++;
+document.body.classList.add("alertHigh");
+bar.classList.add("alert");
+document.getElementById("alertHighSound").play();
+
+if(lastStatus!=="high"){
+speak("تحذير. تم اكتشاف رسالة خطيرة عالية الخطورة.");
+lastStatus="high";
+}
 }else{
-  score=0;
-  statusText=texts[lang].safe;
-  stats.safe++;
+score=0;
+status="آمن";
+stats.safe++;
+
+if(lastStatus!=="safe"){
+speak("الرسالة تبدو آمنة.");
+lastStatus="safe";
+}
 }
 
-document.getElementById("status").innerText=statusText;
+document.getElementById("status").innerText=status;
 document.getElementById("score").innerText=score;
 bar.style.width=score+"%";
-document.getElementById("mitre").innerText="MITRE: T1566, T1204";
-document.getElementById("incident").innerText=generateIncident();
-document.getElementById("feed").innerText=statusText+" - "+new Date().toLocaleTimeString();
-document.getElementById("log").innerHTML+=`[${new Date().toLocaleTimeString()}] ${document.getElementById("incident").innerText} - ${statusText} (${score}%)<br>`;
+
+let inc=generateIncident();
+document.getElementById("incident").innerText=inc;
+
+document.getElementById("log").innerHTML+=
+`[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
+
 updateChart();
 }
 
-function analyze(){clearTimeout(debounceTimer);debounceTimer=setTimeout(()=>{analyzeMessage();},500);}
+function analyze(){
+clearTimeout(debounceTimer);
+debounceTimer=setTimeout(analyzeMessage,600);
+}
+
 document.getElementById("msg").addEventListener("input",analyze);
-document.getElementById("msg").addEventListener("mouseenter",()=>{document.getElementById("hoverSound").play(); speak(texts[lang].hover);});
 
-let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','High'],datasets:[{data:[0,0],backgroundColor:['#00ff7f','#ff4d4d']}]}});
-function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.high];chart.update();}
+document.getElementById("msg").addEventListener("focus",()=>{
+speak("تم تحديد مربع إدخال الرسالة.");
+});
 
-function exportReport(){let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
+// 🔥 قراءة أي عنصر فيه data-voice
+document.querySelectorAll("[data-voice]").forEach(el=>{
+el.addEventListener("mouseenter",()=>{
+speak(el.getAttribute("data-voice"));
+});
+});
+
+let chart=new Chart(document.getElementById("chart"),{
+type:'doughnut',
+data:{
+labels:['Safe','High'],
+datasets:[{
+data:[0,0],
+backgroundColor:['#00ff7f','#ff4d4d']
+}]
+}
+});
+
+function updateChart(){
+chart.data.datasets[0].data=[stats.safe,stats.high];
+chart.update();
+}
 </script>
+
 </body>
 </html>
