--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@ margin:0;
 font-family:'Cairo',sans-serif;
 background:#001a00;
 color:#00ff7f;
-transition:0.5s;
+transition:0.4s;
+}
+
+body.alertHigh{
+background:#550000 !important;
+color:#fff;
+animation:shake 0.3s;
+}
+
+@keyframes shake{
+0%{transform:translateX(0);}
+25%{transform:translateX(-5px);}
+50%{transform:translateX(5px);}
+75%{transform:translateX(-5px);}
+100%{transform:translateX(0);}
 }
 
 header{
 text-align:center;
 padding:20px;
 border-bottom:1px solid #00ff7f33;
-cursor:pointer;
 }
 
 .container{
@@ -32,7 +45,7 @@ border-radius:20px;
 
 textarea{
 width:100%;
-height:140px;
+height:120px;
 background:#000;
 border:2px solid #00ff7f;
 border-radius:15px;
@@ -40,12 +53,16 @@ padding:15px;
 color:#00ff7f;
 font-size:16px;
 resize:none;
-transition:0.3s;
 }
 
-textarea:focus{
-outline:none;
-box-shadow:0 0 20px #00ff7f;
+button{
+background:#00aa55;
+border:none;
+padding:10px 20px;
+color:#fff;
+border-radius:10px;
+cursor:pointer;
+margin-top:10px;
 }
 
 .card{
@@ -54,11 +71,10 @@ padding:20px;
 border-radius:15px;
 margin-top:15px;
 box-shadow:0 0 15px #00ff7f22;
-cursor:pointer;
 }
 
 .progress{
-height:12px;
+height:10px;
 background:#003300;
 border-radius:10px;
 margin-top:10px;
@@ -72,21 +88,6 @@ border-radius:10px;
 transition:0.5s;
 }
 
-.bar.alert{
-animation:pulse 1s infinite;
-}
-
-@keyframes pulse{
-0%{width:100%;}
-50%{width:95%;}
-100%{width:100%;}
-}
-
-body.alertHigh{
-background:#550000 !important;
-color:#fff !important;
-}
-
 .log{
 max-height:150px;
 overflow:auto;
@@ -95,159 +96,122 @@ padding:10px;
 border-radius:10px;
 font-size:12px;
 }
-
-footer{
-text-align:center;
-padding:15px;
-font-size:12px;
-border-top:1px solid #00ff7f33;
-cursor:pointer;
-}
 </style>
 </head>
 
 <body>
 
-<header data-voice="BlackFalcon SOC. نظام مراقبة وتحليل التهديدات السيبرانية.">
+<header>
 <h1>🦅 BlackFalcon SOC™</h1>
 <p>Security Operations Simulation</p>
 </header>
 
 <div class="container">
 
-<textarea id="msg"
-data-voice="هذا مربع إدخال الرسالة. اكتب الرسالة لتحليلها أمنياً."
-placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+<textarea id="msg" placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
 
-<div class="card" data-voice="قسم حالة التهديد ونسبة الخطورة.">
+<button onclick="startSimulation()">تشغيل وضع المحاكاة</button>
+
+<div class="card">
 <h3>Threat Status</h3>
 <p id="status">—</p>
 <p>Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
 <p>Incident ID: <span id="incident">—</span></p>
+<p>Live Threat Counter: <span id="counter">0</span></p>
 </div>
 
-<div class="card" data-voice="سجل الحوادث الأمنية المكتشفة.">
+<div class="card">
 <h3>Incident Log</h3>
 <div class="log" id="log"></div>
 </div>
 
-<div class="card" data-voice="إحصائيات تحليل الرسائل الآمنة والخطيرة.">
+<div class="card">
 <h3>Statistics</h3>
 <canvas id="chart"></canvas>
 </div>
 
 </div>
 
-<footer data-voice="تم تطوير النظام بواسطة BlackFalcon SOC.">
-BlackFalcon SOC™
-</footer>
-
-<audio id="alertHighSound">
+<audio id="alertSound">
 <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
 </audio>
 
 <script>
 let stats={safe:0,high:0};
-let lastStatus="";
-let debounceTimer=null;
-let lastSpoken="";
+let counter=0;
+let simulationRunning=false;
 
 const suspiciousWords=[
 "تحقق من كلمة المرور",
-"تحقق من حسابك",
 "تحقق من حسابك البنكي",
 "قم بالدخول إلى حسابك",
 "تحديث الحساب",
-"الإجراء المطلوب",
-"فعّل الآن",
-"تغيير كلمة المرور",
 "انقر للتحقق",
-"أكد بياناتك",
-"معلومات سرية",
-"اختراق البيانات"
+"أكد بياناتك"
 ];
 
-const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
+const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
 function speak(text){
-if(text===lastSpoken) return;
-lastSpoken=text;
 let u=new SpeechSynthesisUtterance(text);
 u.lang="ar-SA";
-u.rate=0.95;
 speechSynthesis.cancel();
 speechSynthesis.speak(u);
 }
 
-function generateIncident(){
-return "INC-"+Date.now().toString().slice(-6);
-}
-
-function analyzeMessage(){
-let text=document.getElementById("msg").value.toLowerCase().normalize("NFC");
-if(text.length<3) return;
-
-let score=0;
-let status="";
-let bar=document.getElementById("bar");
-
-document.body.classList.remove("alertHigh");
-bar.classList.remove("alert");
-
-if(suspiciousPattern.test(text)){
-score=100;
-status="خطر عالي";
-stats.high++;
-document.body.classList.add("alertHigh");
-bar.classList.add("alert");
-document.getElementById("alertHighSound").play();
-
-if(lastStatus!=="high"){
-speak("تحذير. تم اكتشاف رسالة خطيرة عالية الخطورة.");
-lastStatus="high";
-}
-}else{
-score=0;
-status="آمن";
-stats.safe++;
-
-if(lastStatus!=="safe"){
-speak("الرسالة تبدو آمنة.");
-lastStatus="safe";
-}
-}
-
-document.getElementById("status").innerText=status;
-document.getElementById("score").innerText=score;
-bar.style.width=score+"%";
-
-let inc=generateIncident();
-document.getElementById("incident").innerText=inc;
-
-document.getElementById("log").innerHTML+=
-`[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
-
-updateChart();
-}
-
 function analyze(){
-clearTimeout(debounceTimer);
-debounceTimer=setTimeout(analyzeMessage,600);
+let text=document.getElementById("msg").value;
+
+if(pattern.test(text)){
+triggerHighThreat();
+}else{
+document.getElementById("status").innerText="آمن";
+document.getElementById("score").innerText="0";
+document.getElementById("bar").style.width="0%";
+stats.safe++;
+updateChart();
+speak("الرسالة آمنة.");
+}
 }
 
 document.getElementById("msg").addEventListener("input",analyze);
 
-document.getElementById("msg").addEventListener("focus",()=>{
-speak("تم تحديد مربع إدخال الرسالة.");
-});
+function triggerHighThreat(){
+counter++;
+document.body.classList.add("alertHigh");
+document.getElementById("status").innerText="خطر عالي";
+document.getElementById("score").innerText="100";
+document.getElementById("bar").style.width="100%";
+document.getElementById("counter").innerText=counter;
+document.getElementById("alertSound").play();
+stats.high++;
+updateChart();
+speak("تحذير. تهديد عالي الخطورة.");
+logIncident("هجوم تصيد إلكتروني محتمل");
+}
 
-// 🔥 قراءة أي عنصر فيه data-voice
-document.querySelectorAll("[data-voice]").forEach(el=>{
-el.addEventListener("mouseenter",()=>{
-speak(el.getAttribute("data-voice"));
-});
-});
+function logIncident(text){
+let id="INC-"+Date.now().toString().slice(-6);
+document.getElementById("incident").innerText=id;
+document.getElementById("log").innerHTML+=
+`[${new Date().toLocaleTimeString()}] ${id} - ${text}<br>`;
+}
+
+function startSimulation(){
+if(simulationRunning) return;
+simulationRunning=true;
+
+speak("تنبيه. يتم حالياً رصد نشاط مشبوه متصاعد.");
+
+let interval=setInterval(()=>{
+triggerHighThreat();
+if(counter>=5){
+clearInterval(interval);
+simulationRunning=false;
+}
+},2000);
+}
 
 let chart=new Chart(document.getElementById("chart"),{
 type:'doughnut',
