--- a/index.html
+++ b/index.html
@@ -12,25 +12,21 @@ margin:0;
 font-family:'Cairo',sans-serif;
 background:#001a00;
 color:#00ff7f;
-transition:0.4s;
-}
-
-body.alertHigh{
-background:#7a0000 !important;
-color:#fff !important;
+transition:0.5s;
 }
 
 header{
 text-align:center;
 padding:20px;
 border-bottom:1px solid #00ff7f33;
+cursor:pointer;
 }
 
 .container{
 max-width:1000px;
 margin:20px auto;
 padding:25px;
-background:rgba(0,20,0,0.92);
+background:rgba(0,20,0,0.9);
 border-radius:20px;
 }
 
@@ -44,6 +40,7 @@ padding:15px;
 color:#00ff7f;
 font-size:16px;
 resize:none;
+transition:0.3s;
 }
 
 textarea:focus{
@@ -57,6 +54,7 @@ padding:20px;
 border-radius:15px;
 margin-top:15px;
 box-shadow:0 0 15px #00ff7f22;
+cursor:pointer;
 }
 
 .progress{
@@ -71,7 +69,22 @@ height:100%;
 width:0%;
 background:#00ff7f;
 border-radius:10px;
-transition:0.4s;
+transition:0.5s;
+}
+
+.bar.alert{
+animation:pulse 1s infinite;
+}
+
+@keyframes pulse{
+0%{width:100%;}
+50%{width:95%;}
+100%{width:100%;}
+}
+
+body.alertHigh{
+background:#550000 !important;
+color:#fff !important;
 }
 
 .log{
@@ -82,21 +95,31 @@ padding:10px;
 border-radius:10px;
 font-size:12px;
 }
+
+footer{
+text-align:center;
+padding:15px;
+font-size:12px;
+border-top:1px solid #00ff7f33;
+cursor:pointer;
+}
 </style>
 </head>
 
 <body>
 
-<header>
+<header data-voice="BlackFalcon SOC. نظام مراقبة وتحليل التهديدات السيبرانية.">
 <h1>🦅 BlackFalcon SOC™</h1>
 <p>Security Operations Simulation</p>
 </header>
 
 <div class="container">
 
-<textarea id="msg" placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+<textarea id="msg"
+data-voice="هذا مربع إدخال الرسالة. اكتب الرسالة لتحليلها أمنياً."
+placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
 
-<div class="card">
+<div class="card" data-voice="قسم حالة التهديد ونسبة الخطورة.">
 <h3>Threat Status</h3>
 <p id="status">—</p>
 <p>Risk Score: <span id="score">0</span>%</p>
@@ -104,60 +127,55 @@ font-size:12px;
 <p>Incident ID: <span id="incident">—</span></p>
 </div>
 
-<div class="card">
+<div class="card" data-voice="سجل الحوادث الأمنية المكتشفة.">
 <h3>Incident Log</h3>
 <div class="log" id="log"></div>
 </div>
 
-<div class="card">
+<div class="card" data-voice="إحصائيات تحليل الرسائل الآمنة والخطيرة.">
 <h3>Statistics</h3>
 <canvas id="chart"></canvas>
 </div>
 
 </div>
 
-<audio id="alertSound">
+<footer data-voice="تم تطوير النظام بواسطة BlackFalcon SOC.">
+BlackFalcon SOC™
+</footer>
+
+<audio id="alertHighSound">
 <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
 </audio>
 
 <script>
 let stats={safe:0,high:0};
 let lastStatus="";
-let selectedVoice=null;
+let debounceTimer=null;
+let lastSpoken="";
 
-// 🎙️ اختيار صوت أنثوي ناعم قريب من Siri
-function loadVoices(){
-let voices=speechSynthesis.getVoices();
+const suspiciousWords=[
+"تحقق من كلمة المرور",
+"تحقق من حسابك",
+"تحقق من حسابك البنكي",
+"قم بالدخول إلى حسابك",
+"تحديث الحساب",
+"الإجراء المطلوب",
+"فعّل الآن",
+"تغيير كلمة المرور",
+"انقر للتحقق",
+"أكد بياناتك",
+"معلومات سرية",
+"اختراق البيانات"
+];
 
-selectedVoice = voices.find(v =>
-v.lang.includes("ar") &&
-(v.name.toLowerCase().includes("female") ||
- v.name.toLowerCase().includes("woman") ||
- v.name.toLowerCase().includes("sara") ||
- v.name.toLowerCase().includes("hoda"))
-);
-
-if(!selectedVoice){
-selectedVoice = voices.find(v =>
-v.lang.includes("en") &&
-(v.name.toLowerCase().includes("female") ||
- v.name.toLowerCase().includes("zira"))
-);
-}
-}
-
-speechSynthesis.onvoiceschanged = loadVoices;
+const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
 
 function speak(text){
+if(text===lastSpoken) return;
+lastSpoken=text;
 let u=new SpeechSynthesisUtterance(text);
-u.voice=selectedVoice;
-u.lang=selectedVoice ? selectedVoice.lang : "ar-SA";
-
-// 🔥 إعدادات صوت ناعم جداً
-u.rate=0.78;
-u.pitch=1.1;
-u.volume=1;
-
+u.lang="ar-SA";
+u.rate=0.95;
 speechSynthesis.cancel();
 speechSynthesis.speak(u);
 }
@@ -166,72 +184,70 @@ function generateIncident(){
 return "INC-"+Date.now().toString().slice(-6);
 }
 
-// 🔴 كل الكلمات المشبوهة القديمة + إضافات قوية
-const suspiciousWords=[
-"تحقق من كلمة المرور",
-"تحقق من حسابك",
-"تحقق من حسابك البنكي",
-"حسابك البنكي",
-"تحديث الحساب",
-"قم بالدخول إلى حسابك",
-"إعادة تعيين كلمة المرور",
-"تغيير كلمة المرور",
-"انقر للتحقق",
-"اضغط هنا",
-"الإجراء المطلوب",
-"معلومات سرية",
-"بياناتك الشخصية",
-"اختراق الحساب",
-"اختراق البيانات",
-"تم تعليق حسابك",
-"تم تجميد حسابك",
-"تأكيد الهوية",
-"رمز التحقق",
-"شارك رمز التحقق",
-"استلمت حوالة",
-"مكافأة مالية",
-"انضم إلى الملايين",
-"فرصة استثمار فوري"
-];
-
-const pattern=new RegExp(suspiciousWords.join("|"),"i");
-
-function analyze(){
-let text=document.getElementById("msg").value.toLowerCase().normalize("NFC").trim();
+function analyzeMessage(){
+let text=document.getElementById("msg").value.toLowerCase().normalize("NFC");
 if(text.length<3) return;
 
+let score=0;
+let status="";
 let bar=document.getElementById("bar");
-document.body.classList.remove("alertHigh");
 
-if(pattern.test(text)){
-document.body.classList.add("alertHigh");
-document.getElementById("status").innerText="خطر عالي";
-document.getElementById("score").innerText="100";
-bar.style.width="100%";
-document.getElementById("alertSound").play();
+document.body.classList.remove("alertHigh");
+bar.classList.remove("alert");
+
+if(suspiciousPattern.test(text)){
+score=100;
+status="خطر عالي";
 stats.high++;
-speak("تحذير. تم اكتشاف رسالة خطيرة.");
-logIncident("تهديد تصيد إلكتروني محتمل");
-}else{
-document.getElementById("status").innerText="آمن";
-document.getElementById("score").innerText="0";
-bar.style.width="0%";
-stats.safe++;
-speak("الرسالة آمنة.");
-logIncident("لا يوجد تهديد");
+document.body.classList.add("alertHigh");
+bar.classList.add("alert");
+document.getElementById("alertHighSound").play();
+
+if(lastStatus!=="high"){
+speak("تحذير. تم اكتشاف رسالة خطيرة عالية الخطورة.");
+lastStatus="high";
 }
+}else{
+score=0;
+status="آمن";
+stats.safe++;
+
+if(lastStatus!=="safe"){
+speak("الرسالة تبدو آمنة.");
+lastStatus="safe";
+}
+}
+
+document.getElementById("status").innerText=status;
+document.getElementById("score").innerText=score;
+bar.style.width=score+"%";
+
+let inc=generateIncident();
+document.getElementById("incident").innerText=inc;
+
+document.getElementById("log").innerHTML+=
+`[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
 
 updateChart();
 }
 
+function analyze(){
+clearTimeout(debounceTimer);
+debounceTimer=setTimeout(analyzeMessage,600);
+}
+
 document.getElementById("msg").addEventListener("input",analyze);
 
-function logIncident(text){
-let id="INC-"+Date.now().toString().slice(-6);
-document.getElementById("incident").innerText=id;
-document.getElementById("log").innerHTML+=
-`[${new Date().toLocaleTimeString()}] ${id} - ${text}<br>`;
-}
+document.getElementById("msg").addEventListener("focus",()=>{
+speak("تم تحديد مربع إدخال الرسالة.");
+});
+
+// 🔥 قراءة أي عنصر فيه data-voice
+document.querySelectorAll("[data-voice]").forEach(el=>{
+el.addEventListener("mouseenter",()=>{
+speak(el.getAttribute("data-voice"));
+});
+});
 
 let chart=new Chart(document.getElementById("chart"),{
 type:'doughnut',
