--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ border:none;
 border-radius:15px;
 font-weight:bold;
 cursor:pointer;
-cursor:pointer;
 }
 
 .center{text-align:center;}
@@ -78,7 +77,6 @@ transition:0.5s;
 background:#ff0000;
 }
 
-/* 🔥 مربع التوصية */
 .recommendation{
 width:85%;
 margin:20px auto;
@@ -97,39 +95,39 @@ border:2px solid #ff0000;
 box-shadow:0 0 25px #ff000066;
 color:#ffb3b3;
 }
-
 </style>
 </head>
 
 <body>
 
 <header>
-<h1 class="speakable">🦅 BlackFalcon SOC</h1>
-<p class="speakable">Advanced Security Operations Platform</p>
+<h1 id="title" class="speakable">🦅 BlackFalcon SOC</h1>
+<p id="subtitle" class="speakable">Advanced Security Operations Platform</p>
 </header>
 
 <div class="center">
+<button onclick="toggleLang()" class="speakable">🌍 Change Language</button>
 <button onclick="window.print()" class="speakable">Export Report</button>
 </div>
 
 <textarea id="msg" placeholder="Paste suspicious message here..." class="speakable"></textarea>
 
 <div class="card">
-<h3 class="speakable">Threat Status</h3>
+<h3 id="threatTitle" class="speakable">Threat Status</h3>
 <p id="status" class="speakable">—</p>
-<p class="speakable">Risk Score: <span id="score">0</span>%</p>
+<p class="speakable"><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
 <p class="speakable">MITRE: <span id="mitre">—</span></p>
-<p class="speakable">Incident ID: <span id="incident">—</span></p>
+<p class="speakable"><span id="incidentLabel">Incident ID</span>: <span id="incident">—</span></p>
 </div>
 
-<!-- 🔥 مربع التوصية الأمنية -->
 <div id="recommendationBox" class="recommendation speakable">
 Security recommendation will appear here.
 </div>
 
 <script>
 
+let currentLang="en";
 let debounceTimer=null;
 
 const suspiciousWords=[
@@ -142,7 +140,7 @@ const suspiciousWords=[
 
 const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
-/* 🎙 اختيار صوت ناعم */
+/* اختيار صوت ناعم */
 function getSoftVoice(){
 let voices=window.speechSynthesis.getVoices();
 return voices.find(v =>
@@ -156,6 +154,7 @@ function speak(text){
 if(!text) return;
 window.speechSynthesis.cancel();
 let speech=new SpeechSynthesisUtterance(text);
+speech.lang=currentLang==="ar"?"ar-SA":"en-US";
 speech.rate=0.95;
 speech.pitch=1;
 speech.voice=getSoftVoice();
@@ -184,7 +183,7 @@ recBox.classList.remove("danger");
 
 if(pattern.test(text)){
 
-statusEl.innerText="HIGH RISK";
+statusEl.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
 score.innerText="100";
 bar.style.width="100%";
 bar.classList.add("danger");
@@ -192,38 +191,35 @@ mitre.innerText="T1566 - Phishing";
 incident.innerText=generateID();
 document.body.classList.add("alert");
 
-recBox.innerText="⚠️ SECURITY RECOMMENDATION: Do NOT click any links. Block the sender immediately and report to cybersecurity team.";
+recBox.innerText=currentLang==="ar"?
+"⚠️ التوصية الأمنية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن السيبراني فوراً." :
+"⚠️ Security Recommendation: Do NOT click any links. Block the sender and report immediately.";
 recBox.classList.add("danger");
 
 setTimeout(()=>{
-speak("Warning. High risk message detected.");
-setTimeout(()=>{
-speak("Security recommendation. Do not click any links. Block sender immediately.");
-},1500);
+speak(currentLang==="ar"?"تحذير. الرسالة خطيرة جداً":"Warning. High risk message detected.");
 },500);
 
 }else{
 
-statusEl.innerText="SAFE";
+statusEl.innerText=currentLang==="ar"?"آمن":"SAFE";
 score.innerText="0";
 bar.style.width="0%";
 mitre.innerText="None";
 incident.innerText=generateID();
 
-recBox.innerText="✔ Security recommendation: No malicious indicators detected. Continue monitoring only.";
+recBox.innerText=currentLang==="ar"?
+"✔ التوصية الأمنية: لا يوجد مؤشرات خطيرة. فقط استمر بالمراقبة." :
+"✔ Security Recommendation: No malicious indicators detected. Continue monitoring.";
 recBox.classList.remove("danger");
 
 setTimeout(()=>{
-speak("Message is safe.");
-setTimeout(()=>{
-speak("No malicious indicators detected.");
-},1200);
+speak(currentLang==="ar"?"الرسالة آمنة":"Message is safe.");
 },500);
 }
-
 }
 
-/* تحليل بعد التوقف فقط */
+/* تحليل بعد التوقف */
 document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
 debounceTimer=setTimeout(analyze,2000);
@@ -237,10 +233,33 @@ speak(text);
 }
 });
 
-/* قراءة مربع النص عند الدخول */
 document.getElementById("msg").addEventListener("focus",()=>{
-speak("Text input box. Paste message to analyze.");
+speak(currentLang==="ar"?
+"أنت الآن في مربع إدخال النص. الصق الرسالة للتحليل.":
+"You are now in the text input box. Paste message to analyze.");
 });
+
+/* زر تغيير اللغة */
+function toggleLang(){
+
+if(currentLang==="en"){
+currentLang="ar";
+document.getElementById("subtitle").innerText="منصة مركز العمليات الأمنية";
+document.getElementById("threatTitle").innerText="حالة التهديد";
+document.getElementById("riskLabel").innerText="درجة الخطورة";
+document.getElementById("incidentLabel").innerText="رقم الحادثة";
+document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
+}else{
+currentLang="en";
+document.getElementById("subtitle").innerText="Advanced Security Operations Platform";
+document.getElementById("threatTitle").innerText="Threat Status";
+document.getElementById("riskLabel").innerText="Risk Score";
+document.getElementById("incidentLabel").innerText="Incident ID";
+document.getElementById("msg").placeholder="Paste suspicious message here...";
+}
+
+speak(currentLang==="ar"?"تم تغيير اللغة":"Language changed");
+}
 
 </script>
 
